# SSOJ

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
OJ/: .env.exaplme  README.md  gen.cpp  maker.sh
backend/: Dockerfile  README.md  pom.xml
database/: README.md  init_data.sql  schema.sql
database/test_cases/problem_1/: 2.out  6.in
database/test_cases/problem_4/: 10.out  4.in  5.out  7.in
database/test_cases/problem_5/: 8.in  9.in  9.out
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/frontend/: package-lock.json
frontend/src/: App.tsx  api.ts  completions.ts  main.tsx  styles.css
frontend/src/__tests__/: ProblemDetail.test.tsx  ProblemList.test.tsx  ProblemManage.test.tsx
frontend/src/components/: NotificationDropdown.tsx
frontend/src/pages/: Dashboard.tsx  (+16 more)
judger/: CMakeLists.txt  README.md
judger/config/: language_config.json  syscall_whitelist.json
judger/src/: comparator.cpp  comparator.h  compiler.cpp  compiler.h  main.cpp  resource.cpp  resource.h  runner.cpp  runner.h  security.cpp  security.h  utils.cpp  utils.h
judger/tests/: Makefile  README.md  aplusb.cpp  benchmark_cpu.cpp  ce.cpp  re.cpp  solve.cpp  test_comparator.cpp  test_compiler.cpp  test_complete.cpp  test_resource_limits.cpp  test_runner_comprehensive.cpp  test_runner_simple.cpp  test_utils.cpp  tle.cpp  wa.cpp
maker/: README.md  gen  gen.cpp  maker.sh  sol  sol.cpp
maker/data/: 1.in  10.in  2.in  3.in  4.in  5.in  6.in  7.in  8.in  9.in
(+76 files in other folders)
